--- a/src/dewarping/CMakeLists.txt
+++ b/src/dewarping/CMakeLists.txt
@@ -4,6 +4,9 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/core)
 
 SET(
         sources
+        Curve.cpp Curve.h
+        DepthPerception.cpp DepthPerception.h
+        DistortionModel.cpp DistortionModel.h
 )
 SOURCE_GROUP("Sources" FILES ${sources})
 
