Add Eigen dependency to cmake project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,11 @@ IF(WIN32)
         ADD_DEFINITIONS(-DUSE_LIBTIFF_DLL)
 ENDIF()
 
+FIND_PACKAGE(Eigen3 REQUIRED)
+INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
+ADD_COMPILE_OPTIONS(-DEIGEN_MPL2_ONLY)
+ADD_DEFINITIONS(-DEIGEN_DONT_ALIGN_STATICALLY)
+
 IF(WIN32)
         SET(Boost_USE_STATIC_LIBS ON)
 ELSE(WIN32)
