Add STEX CylDewarper and its dependencies

--- a/src/dewarping/CMakeLists.txt
+++ b/src/dewarping/CMakeLists.txt
@@ -5,8 +5,13 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/core)
 SET(
         sources
         Curve.cpp Curve.h
+        CylindricalSurfaceDewarper.cpp CylindricalSurfaceDewarper.h
         DepthPerception.cpp DepthPerception.h
         DistortionModel.cpp DistortionModel.h
+        STEX_HomographicTransform.h
+        STEX_MultipleTargetsSupport.h
+        STEX_ToPoint.h
+        STEX_ToVec.h
 )
 SOURCE_GROUP("Sources" FILES ${sources})
 
