Add STEX deskew utils

--- a/src/core/filters/deskew/CMakeLists.txt
+++ b/src/core/filters/deskew/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(
         RotationThumbnail.cpp RotationThumbnail.h
         Settings.cpp Settings.h
         Task.cpp Task.h
+        Utils.cpp Utils.h
 )
 SOURCE_GROUP("Sources" FILES ${sources})
 FILE(GLOB ui_files "ui/*.ui")
