Add MultipleTargetsSupport.h from STEX

--- a/src/foundation/CMakeLists.txt
+++ b/src/foundation/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(
         GridLineTraverser.cpp GridLineTraverser.h
         StaticPool.h
         DynamicPool.h
+        MultipleTargetsSupport.h
         NumericTraits.h
         VecNT.h
         VecT.h
