--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,15 @@
-Source: scantailor-universal
+Source: scantailor-deviant
 Section: graphics
 Priority: optional
 Maintainer: Alexander Trufanov <trufanovan@gmail.com>
 Build-Depends: debhelper-compat (= 9), qtbase5-dev (>=5.4), libqt5svg5-dev (>=5.4), libtiff5-dev (>=4.0.3), libjpeg8-dev (>=8c), libgcc1 (>=1.3.0), libc6 (>=2.14), libpng-dev (>=1.6.2), libstdc++6 (>=5.2), qttools5-dev (>=5.4), libboost-dev (>=1.35.0), libboost-test-dev (>=1.35.0), cmake (>=2.8.9), libcanberra-dev(>=0.30), pkg-config, libopenjp2-7-dev (>=2.3), libexiv2-dev (>=0.26)
 Standards-Version: 4.5.0
-Homepage: https://github.com/trufanov-nok/scantailor-universal
-#Vcs-Browser: https://salsa.debian.org/debian/scantailor-universal
-#Vcs-Git: https://salsa.debian.org/debian/scantailor-universal.git
+Homepage: https://github.com/ImageProcessing-ElectronicPublications/scantailor-deviant
+#Vcs-Browser: https://salsa.debian.org/debian/scantailor-deviant
+#Vcs-Git: https://salsa.debian.org/debian/scantailor-deviant.git
 Rules-Requires-Root: no
 
-Package: scantailor-universal
+Package: scantailor-deviant
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: qttranslations5-l10n (>=5.4)
