--- a/src/core/interaction/CMakeLists.txt
+++ b/src/core/interaction/CMakeLists.txt
@@ -21,4 +21,4 @@ SOURCE_GROUP(Sources FILES ${sources})
 
 ADD_LIBRARY(interaction STATIC ${sources})
 QT5_USE_MODULES(interaction Widgets)
-TRANSLATION_SOURCES(scantailor-universal ${sources})
+TRANSLATION_SOURCES(scantailor-deviant ${sources})
