Add STEX DistortionModelBuilder code

--- a/src/dewarping/CMakeLists.txt
+++ b/src/dewarping/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(
         DepthPerception.cpp DepthPerception.h
         DetectVerticalBounds.cpp DetectVerticalBounds.h
         DistortionModel.cpp DistortionModel.h
+        DistortionModelBuilder.cpp DistortionModelBuilder.h
         STEX_AbstractImageTransform.h
         STEX_AffineImageTransform.cpp STEX_AffineImageTransform.h
         STEX_AffineTransform.cpp STEX_AffineTransform.h
