--- a/src/dewarping/CMakeLists.txt
+++ b/src/dewarping/CMakeLists.txt
@@ -38,6 +38,7 @@ SET(
         STEX_WatershedSegmentation.cpp STEX_WatershedSegmentation.h
         TextLineRefiner.cpp TextLineRefiner.h
         TextLineSegmenter.cpp TextLineSegmenter.h
+        TopBottomEdgeTracer.cpp TopBottomEdgeTracer.h
 )
 SOURCE_GROUP("Sources" FILES ${sources})
 
