Fix missing BadAllocIfNull code

--- a/src/dewarping/CMakeLists.txt
+++ b/src/dewarping/CMakeLists.txt
@@ -16,7 +16,7 @@ SET(
         STEX_AffineImageTransform.cpp STEX_AffineImageTransform.h
         STEX_AffineTransform.cpp STEX_AffineTransform.h
         STEX_AffineTransformedImage.cpp STEX_AffineTransformedImage.h
-        STEX_BadAllocIfNull.h
+        STEX_BadAllocIfNull.cpp STEX_BadAllocIfNull.h
         STEX_BWPixelProxy.h
         STEX_Connectivity.h
         STEX_ConnectivityMap.cpp STEX_ConnectivityMap.h
