Clean: Relocate STEX PlugHoles

--- a/src/imageproc/CMakeLists.txt
+++ b/src/imageproc/CMakeLists.txt
@@ -56,6 +56,7 @@ SET(
         ColorMixer.h
         ColorForId.h
         TraverseBorders.h
+        PlugHoles.h
 )
 
 SOURCE_GROUP(Sources FILES ${sources})
