--- a/config.h.in
+++ b/config.h.in
@@ -10,7 +10,7 @@
 
 #define PIXMAPS_DIR_ABS "@PIXMAPS_DIR_ABS@"
 #define APPLICATION_NAME "Scan Tailor Deviant"
-#define ORGANIZATION_NAME APPLICATION_NAME
+#define ORGANIZATION_NAME "Scan Tailor"
 #define ORGANIZATION_DOMAIN "github.com/ImageProcessing-ElectronicPublications/scantailor-deviant"
 
 #cmakedefine ENABLE_OPENGL
