Fuzzy compare size in output stage
* Steel need to fix size rounding errors

--- a/src/foundation/CMakeLists.txt
+++ b/src/foundation/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(
         NonCopyable.h IntrusivePtr.h RefCountable.h
         AlignedArray.h
         FastQueue.h
+        FuzzyEquals.cpp FuzzyEquals.h
         SafeDeletingQObjectPtr.h
         ScopedIncDec.h ScopedDecInc.h
         Span.h VirtualFunction.h FlagOps.h
