Set default thumbnail colors if no css is applied

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -35,7 +35,7 @@ SET(
         ProjectCreationContext.cpp ProjectCreationContext.h
         ProjectOpeningContext.cpp ProjectOpeningContext.h
         OutOfMemoryDialog.cpp OutOfMemoryDialog.h
-        ThumbnailView.h
+        ThumbnailView.cpp ThumbnailView.h
         ThumbnailSequence.cpp ThumbnailSequence.h
         ProjectFilesDialog.cpp ProjectFilesDialog.h
         NewOpenProjectPanel.cpp NewOpenProjectPanel.h
