Add dewarping SizeMode class

--- a/src/dewarping/CMakeLists.txt
+++ b/src/dewarping/CMakeLists.txt
@@ -16,6 +16,7 @@ SET(
         FovParams.cpp FovParams.h
         RasterDewarper.cpp RasterDewarper.h
         HomographicTransform.cpp HomographicTransform.h
+        SizeMode.cpp SizeMode.h
         STEX_ToPoint.h
         STEX_ToVec.h
         STEX_VecNT.h
