--- a/src/dewarping/CMakeLists.txt
+++ b/src/dewarping/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(
         DistortionModelBuilder.cpp DistortionModelBuilder.h
         FrameParams.cpp FrameParams.h
         FovParams.cpp FovParams.h
+        MarginsParams.cpp MarginsParams.h
         RasterDewarper.cpp RasterDewarper.h
         HomographicTransform.cpp HomographicTransform.h
         SizeMode.cpp SizeMode.h
