Fix include and lib variable names after cmake update to v3.31

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,27 +125,27 @@ ENDIF()
 SET(EXTRA_LIBS "")
 
 FIND_PACKAGE(JPEG REQUIRED)
-INCLUDE_DIRECTORIES("${JPEG_INCLUDE_DIR}")
-LIST(APPEND EXTRA_LIBS ${JPEG_LIBRARY})
+INCLUDE_DIRECTORIES("${JPEG_INCLUDE_DIRS}")
+LIST(APPEND EXTRA_LIBS ${JPEG_LIBRARIES})
 
 OPTION(ENABLE_OPENJPEG "OpenJPEG library may be used to support JPEG 2000 (.jp2) images." ON)
 IF (ENABLE_OPENJPEG)
         find_package(OPENJPEG REQUIRED)
-        INCLUDE_DIRECTORIES("${OPENJPEG_INCLUDE_DIR}")
-        LIST(APPEND EXTRA_LIBS ${OPENJPEG_LIBRARY})
+        INCLUDE_DIRECTORIES("${OPENJPEG_INCLUDE_DIRS}")
+        LIST(APPEND EXTRA_LIBS ${OPENJPEG_LIBRARIES})
 ENDIF(ENABLE_OPENJPEG)
 
 FIND_PACKAGE(ZLIB REQUIRED)
-INCLUDE_DIRECTORIES("${ZLIB_INCLUDE_DIR}")
-LIST(APPEND EXTRA_LIBS ${ZLIB_LIBRARY})
+INCLUDE_DIRECTORIES("${ZLIB_INCLUDE_DIRS}")
+LIST(APPEND EXTRA_LIBS ${ZLIB_LIBRARIES})
 
 FIND_PACKAGE(PNG REQUIRED)
-INCLUDE_DIRECTORIES("${PNG_INCLUDE_DIR}")
-LIST(APPEND EXTRA_LIBS ${PNG_LIBRARY})
+INCLUDE_DIRECTORIES("${PNG_INCLUDE_DIRS}")
+LIST(APPEND EXTRA_LIBS ${PNG_LIBRARIES})
 
 FIND_PACKAGE(TIFF REQUIRED)
-INCLUDE_DIRECTORIES("${TIFF_INCLUDE_DIR}")
-LIST(APPEND EXTRA_LIBS ${TIFF_LIBRARY})
+INCLUDE_DIRECTORIES("${TIFF_INCLUDE_DIRS}")
+LIST(APPEND EXTRA_LIBS ${TIFF_LIBRARIES})
 IF(WIN32)
         ADD_DEFINITIONS(-DUSE_LIBTIFF_DLL)
 ENDIF()
@@ -183,8 +183,8 @@ endif()
 OPTION(ENABLE_EXIV2 "Exiv2 library may be used to manage image metadata." ON)
 IF (ENABLE_EXIV2)
         find_package(EXIV2 REQUIRED)
-        INCLUDE_DIRECTORIES("${EXIV2_INCLUDE_DIR}")
-        LIST(APPEND EXTRA_LIBS ${EXIV2_LIBRARY})
+        INCLUDE_DIRECTORIES("${EXIV2_INCLUDE_DIRS}")
+        LIST(APPEND EXTRA_LIBS ${EXIV2_LIBRARIES})
         ADD_DEFINITIONS(-DHAVE_EXIV2)
 ENDIF()
 
