Fix 'CMP0167' cmake-3.30 warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,9 +169,17 @@ ADD_DEFINITIONS(-DBOOST_BIND_GLOBAL_PLACEHOLDERS)
 
 SET(Boost_USE_MULTITHREADED ON)
 IF(ENABLE_TESTS)
-        FIND_PACKAGE(Boost 1.35.0 COMPONENTS unit_test_framework prg_exec_monitor REQUIRED)
+        IF(POLICY CMP0167)
+                FIND_PACKAGE(Boost 1.70.0 COMPONENTS unit_test_framework prg_exec_monitor REQUIRED CONFIG)
+        ELSE()
+                FIND_PACKAGE(Boost 1.35.0 COMPONENTS unit_test_framework prg_exec_monitor REQUIRED)
+        ENDIF()
 ELSE()
-        FIND_PACKAGE(Boost 1.35.0 REQUIRED)
+        IF(POLICY CMP0167)
+                FIND_PACKAGE(Boost 1.70.0 REQUIRED CONFIG)
+        ELSE()
+                FIND_PACKAGE(Boost 1.35.0 REQUIRED)
+        ENDIF()
 ENDIF()
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
