Fix 'CMP0043' cmake-4.0 warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
-IF(POLICY CMP0043)
-        # Don't ignore COMPILE_DEFINITIONS_{CONFIG} directives, as these are used
-	# by Qt.
-	CMAKE_POLICY(SET CMP0043 OLD)
-ENDIF()
-
 IF (POLICY CMP0071)
         CMAKE_POLICY(SET CMP0071 OLD)
 ENDIF()
@@ -239,7 +233,7 @@ ENDIF(WIN32)
 SET(MAYBE_QT_OPENGL_MODULE "")
 IF(ENABLE_OPENGL)
         LIST(APPEND EXTRA_LIBS ${OPENGL_LIBRARIES})
-        SET(MAYBE_QT_OPENGL_MODULE OpenGL)
+        SET(MAYBE_QT_OPENGL_MODULE Qt5::OpenGL)
 ENDIF()
 
 # Prepare config.h
