--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -110,7 +110,7 @@ ADD_DEPENDENCIES(scantailor-deviant fix_orientation page_split deskew select_con
         dewarping zones interaction imageproc math foundation)
 
 
-QT5_USE_MODULES(scantailor-deviant Widgets Xml Svg ${MAYBE_QT_OPENGL_MODULE})
+TARGET_LINK_LIBRARIES(scantailor-deviant Qt5::Widgets Qt5::Xml Qt5::Svg ${MAYBE_QT_OPENGL_MODULE})
 
 IF(EXTRA_LIBS)
         TARGET_LINK_LIBRARIES(scantailor-deviant ${EXTRA_LIBS})
