--- a/src/dewarping/CMakeLists.txt
+++ b/src/dewarping/CMakeLists.txt
@@ -32,5 +32,4 @@ SET(
 SOURCE_GROUP("Sources" FILES ${sources})
 
 ADD_LIBRARY(dewarping STATIC ${sources})
-QT5_USE_MODULES(dewarping Widgets Xml)
-
+TARGET_LINK_LIBRARIES(dewarping Qt5::Widgets Qt5::Xml)
