--- a/src/math/CMakeLists.txt
+++ b/src/math/CMakeLists.txt
@@ -44,7 +44,7 @@ SET(
 SOURCE_GROUP("Sources\\Differentiation Framework" FILES ${ADIFF_SOURCES})
 
 ADD_LIBRARY(math STATIC ${GENERIC_SOURCES} ${SPFIT_SOURCES} ${ADIFF_SOURCES})
-QT5_USE_MODULES(math Core Gui)
+TARGET_LINK_LIBRARIES(math Qt5::Core Qt5::Gui)
 IF(ENABLE_TESTS)
         ADD_SUBDIRECTORY(spfit/tests)
         ADD_SUBDIRECTORY(adiff/tests)
