Fix 'CMP0072' cmake warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
 IF (POLICY CMP0072)
-        CMAKE_POLICY(SET CMP0072 OLD)
+        CMAKE_POLICY(SET CMP0072 NEW)
 ENDIF()
 
 SET(
