Switch off warnings for Boost, Eigen headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,7 +146,7 @@ IF(WIN32)
 ENDIF()
 
 FIND_PACKAGE(Eigen3 REQUIRED)
-INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(SYSTEM ${EIGEN3_INCLUDE_DIR})
 ADD_COMPILE_OPTIONS(-DEIGEN_MPL2_ONLY)
 ADD_DEFINITIONS(-DEIGEN_DONT_ALIGN_STATICALLY)
 
@@ -173,7 +173,7 @@ ELSE()
                 FIND_PACKAGE(Boost 1.35.0 REQUIRED)
         ENDIF()
 ENDIF()
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 
 find_package(OpenMP)
