Switch off exiv2 warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,7 +186,7 @@ endif()
 OPTION(ENABLE_EXIV2 "Exiv2 library may be used to manage image metadata." ON)
 IF (ENABLE_EXIV2)
         find_package(EXIV2 REQUIRED)
-        INCLUDE_DIRECTORIES("${EXIV2_INCLUDE_DIRS}")
+        INCLUDE_DIRECTORIES(SYSTEM "${EXIV2_INCLUDE_DIRS}")
         LIST(APPEND EXTRA_LIBS ${EXIV2_LIBRARIES})
         ADD_DEFINITIONS(-DHAVE_EXIV2)
 ENDIF()
